Added and styled the footer

--- a/index.html
+++ b/index.html
@@ -54,7 +54,15 @@
         </button>
       </div>
     </div>
-
+    <footer>
+      This project was coded with ❤️ by <strong>Refilwe Motaung</strong> and is
+      <a
+        href="https://github.com/Mafifiza/basic-calculator-app"
+        target="_blank"
+      >
+        open-sourced on GitHub</a
+      >
+    </footer>
     <script src="javascript/index.js"></script>
   </body>
 </html>
